change color  and format

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,7 +85,7 @@
   position: relative;
   padding: 11px 35px;
   background: #fff;
-  color: #00796b;
+  color: #10bfcc;
   border: 2px solid #fff;
   font-weight: 600;
   font-size: 15px;
@@ -97,7 +97,7 @@
 
 /* .readme:hover{
   color: white;
-  background-color: #00796b;
+  background-color: #10bfcc;
 } */
 
 .contactme {
@@ -116,7 +116,7 @@
 }
 
 .contactme:hover{
-  color: #00796b;
+  color: #10bfcc;
   background-color: white;
 }
 /* main body */
@@ -136,11 +136,11 @@ body {
 /* main a -- links */
 
 /* a {
-  color: #009688;
+  color: #10bfcc;
 } */
 
 a {
-  color: #004d40;
+  color: #10bfcc; #changed
 }
 
 /* main blockqoute */
@@ -563,7 +563,7 @@ small {
 }
 
 /* .teal {
-  background-color: #00695c !important;
+  background-color: #10bfcc !important; #changed
 } */
 
 @media (min-width: 1200px) {
@@ -602,7 +602,7 @@ small {
     position: absolute;
   }
   nav a.button-collapse, nav a.button-collapse i {
-    color: #009688;
+    color: #10bfcc;
     height: 56px;
     line-height: 56px;
   }
