change color and format

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -315,12 +315,12 @@ h3 {
 /* Original */
 
 /* #intro.section {
-  background: url(../../assets/img/white-ai-wallpaper.jpg) no-repeat top center/cover;
+  background: url(assets/img/white-ai-wallpaper.jpg) no-repeat top center/cover;
   position: relative;
 } */
 
 #intro.section {
-  background: #a7ffeb repeat;
+  background: #10bfcc repeat;
   position: relative;
 }
 
