--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,8 +84,7 @@
 .readme {
   position: relative;
   padding: 11px 35px;
-  background: #fff;
-  color: #10bfcc;
+  color: #FFFFFF;
   border: 2px solid #fff;
   font-weight: 600;
   font-size: 15px;
