--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,35 @@
+.logo {
+  margin-top: 0 !important;
+  padding-top: 0 !important;
+}
+
+.profile-pic {
+  margin-top: 10px;
+}
+
+.side-nav.fixed {
+  top: 0 !important;
+  padding-top: 0 !important;
+  height: 100vh;
+  overflow-y: auto;
+}
+
+.name-title {
+  margin-top: 0 !important;
+  padding-top: 0.5rem;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+}
+
+nav {
+  padding-top: 0 !important;
+  margin-top: 0 !important;
+}
+
+
 .profile-pic {
   position: relative;
   max-width:150px;
@@ -16,10 +48,8 @@
 }
 
 .profile-pic img {
-width: 80px; 
-height: 80px; 
-display: block; 
-margin: 0 auto;
+  width: 100%;
+  height: auto;
 }
 
 .tracker {
