--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,11 +4,12 @@
 
 .card.hoverable {
   display: flex;
+  flex-direction: column;
 }
 .card-content {
   flex-grow: 1;
   display: flex;
-
+  flex-direction: column;
   justify-content: space-between;
 }
 
