--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,13 @@
 .card.hoverable, .card {
   display: flex;
+  flex-direction: column;
+  <!--height: 100%-->
 }
 
 .card.hoverable {
   display: flex;
   flex-direction: column;
+
 }
 .card-content {
   flex-grow: 1;
