--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,16 @@
+/* Specific colors for each button */
+.linkedin {
+            background-color: #0077B5;
+}
+.github {
+           background-color: #333;
+}
+
+/* Style for the new Linktree button */
+        .linktree {
+            background-color: #39E09B; /* Linktree's brand color */
+}
+
 .card.hoverable, .card {
   display: flex;
   flex-direction: column;
